# gmock-free

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gmock-free/: gmock-free.h
include/gmock-free/internal/: gmock-free-impl.h
test/: gmock-free-test.cpp  gmock-free-test2.cpp  mock_external_method.cpp  mock_external_method.h
